build: config publication

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,9 @@
 ### Project
 group=com.skiesmc.aion
-version=0.0.1-SNAPSHOT
+version=0.0.1
 jdkVersion=21
 ### Gradle
 org.gradle.parallel=true
 org.gradle.caching=true
+### Maven Publish
+RELEASE_SIGNING_ENABLED=true
