refactor: move AionCorePlugin to root package

--- a/paperPlugin/src/main/resources/paper-plugin.yml
+++ b/paperPlugin/src/main/resources/paper-plugin.yml
@@ -1,7 +1,7 @@
 name: Aion
 version: $version
 api-version: "1.21"
-main: com.skiesmc.aion.plugin.AionCorePlugin
+main: com.skiesmc.aion.AionCorePlugin
 bootstrapper: com.skiesmc.aion.plugin.bootstrap.AionPluginBoostrap
 authors:
   - SkiesMC
