--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,13 +1,13 @@
 [versions]
-kotlin = "2.0.0"
+kotlin = "2.0.10"
 paperweight = "1.7.1"
-paper = "1.21-R0.1-SNAPSHOT"
+paper = "1.21.1-R0.1-SNAPSHOT"
 run-task = "2.3.0"
-kotlinx-coroutines = "1.9.0-RC"
-mccoroutine = "2.18.0"
-shadow = "8.1.8"
+kotlinx-coroutines = "1.9.0-RC.2"
+mccoroutine = "2.19.0"
+shadow = "8.3.0"
 maven-publish = "0.29.0"
-invui = "1.34"
+invui = "1.36"
 
 [libraries]
 kotlin-bom = { module = "org.jetbrains.kotlin:kotlin-bom", version.ref = "kotlin" }
@@ -30,5 +30,5 @@ mccoroutine-folia = ["mccoroutine-folia-api", "mccoroutine-folia-core"]
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 paperweight-userdev = { id = "io.papermc.paperweight.userdev", version.ref = "paperweight" }
 run-paper = { id = "xyz.jpenilla.run-paper", version.ref = "run-task" }
-shadow = { id = "io.github.goooler.shadow", version.ref = "shadow" }
+shadow = { id = "com.gradleup.shadow", version.ref = "shadow" }
 maven-publish = { id = "com.vanniktech.maven.publish", version.ref = "maven-publish" }
