refactor: rename and enhance KotlinObjectPluginBoostrap error handling.
Renamed AionPluginBoostrap to KotlinObjectPluginBoostrap for clarity. Improved error handling for class loading and type casting, ensuring more informative exceptions. Updated bootstrapper reference in paper-plugin.yml accordingly.

--- a/paperPlugin/src/main/resources/paper-plugin.yml
+++ b/paperPlugin/src/main/resources/paper-plugin.yml
@@ -2,7 +2,7 @@ name: Aion
 version: $version
 api-version: "1.21"
 main: com.skiesmc.aion.AionCorePlugin
-bootstrapper: com.skiesmc.aion.plugin.bootstrap.AionPluginBoostrap
+bootstrapper: com.skiesmc.aion.plugin.bootstrap.KotlinObjectPluginBoostrap
 authors:
   - SkiesMC
   - tozydev
